--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -78,17 +78,19 @@ html, body {
 
 
 .imagenes_mapa{
-    width: 350px;
-    height: 400px;
+    width: 50%;
+    height: auto;
 }
 
+.mapa_google{
+    width: 800px;
+    height: 250px;
+}
 
 .mapa{
     text-align: center;
     justify-items: center;
     margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
 }
 
 .productos{
@@ -100,8 +102,8 @@ html, body {
 
 .card{
     margin-top: 20px;
-    max-width: 100%;
-    max-height: auto;
+    max-width: 250px;
+    max-height: 500px;
 }
 
 .card-text{
@@ -109,7 +111,7 @@ html, body {
 }
 
 .card-img-top{
-    width: 200px;
+    max-width: 100%;
     height: 250px;
     justify-items: center;
 }
@@ -140,18 +142,20 @@ html, body {
 }
 
 .text{
-    margin-right: 40px;
     border: solid #4D4DFF;
     border-radius: 30px;
-    margin-left: 40px;
-    margin-top: 50px;
     justify-content: center;
-    height: 200px;
+    height: auto;
     color: white;
+    padding: 0 20px;
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 50px;
 }
 
 .a{
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .logo_pie{
@@ -193,6 +197,8 @@ ul{
     margin-bottom: 50px;
 }
 
+
+
 .titulo-quien{
     color: #4D4DFF;
 }
@@ -226,11 +232,30 @@ ul{
     }
     .productos{
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-content: center;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center; 
     }
     .card{
-        width: 250px;
-        height: 250px;
+        width: 90%;
+        height: 125px;
+    }
+
+    .informacion{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .mapa_google{
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 200px;
+    }
+
+    .pie{
+        grid-template-columns: repeat(1, 1fr);
+        display: grid;
+        justify-content: center;
+        align-items: center;
     }
 }
