--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -259,3 +259,64 @@ ul{
         align-items: center;
     }
 }
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .inicio{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        gap: 10px;
+    }
+
+    .botones{
+        margin-bottom: 10px;
+        grid-column: 1/3;
+        justify-items: center;
+        text-align: center;
+    }
+
+    .logo{
+        margin-top: 20px;
+    }
+
+    .logo_empresa{
+        text-align: start;
+        margin-left: 80px;
+    }
+
+    .frase{
+        text-align: justify;
+        margin-right: 50px;
+    }
+
+    .promociones{
+        grid-template-columns: repeat(3, 1fr);
+        display: grid;
+        height: 400px;
+    }
+    .promo{
+        width: 150px;
+        height: 200px;
+    }
+
+    #carouselExampleCaptions{
+        align-items: center;
+        width: 400px;
+    }
+
+    .productos{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-content: center; 
+    }
+
+    .informacion{
+        grid-template-columns: repeat(2, 1fr);
+        display: grid;
+        gap: 20px;
+    }
+
+    .text{
+        margin-bottom: 20px;
+    }
+}
